--- a/AssemblyToProcess/AssemblyToProcess.csproj
+++ b/AssemblyToProcess/AssemblyToProcess.csproj
@@ -1,143 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{40939411-32F0-48DD-B17B-FA46DD5D9B25}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AssemblyToProcess</RootNamespace>
-    <AssemblyName>AssemblyToProcess</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <TargetFrameworkProfile>Profile136</TargetFrameworkProfile>
-    <MinimumVisualStudioVersion>10.0</MinimumVisualStudioVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <TargetFrameworks>net452;netcoreapp2.0</TargetFrameworks>
+    <NoWarn>CS0659</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Net" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Serialization" />
+    <ProjectReference Include="..\Equals\Equals.csproj" />
+    <ProjectReference Include="..\ReferencedDependency\ReferencedDependency.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Child.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ClassWithGenericBase.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ClassWithGenericProperty.cs" />
-    <Compile Include="ClassWithIndexer.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ClassWithMethodToRemove.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ClassWithNullable.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ClassWithStaticProperties.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="CustomEquals.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="EmptyClass.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="EnumClass.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="EqualsOrSubtypeClass.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ExactlyOfTypeClass.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ExactlyTheSameTypeAsThisClass.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="GenericClass.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="GuidClass.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="GuidError.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="IgnoreBaseClass.cs" />
-    <Compile Include="IgnoredPropertiesClass.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="InheritedClass.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="IntArray.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="IntCollection.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="NestedClass.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="NormalClass.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ObjectCollection.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="OnlyIntCollection.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="OnlyOperator.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="OverridenWithIgnoredPropertiesClass.cs" />
-    <Compile Include="SimpleClass.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="SimpleStruct.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="StructPropertyClass.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="StructWithOnlyOperator.cs">
-      <SubType>Code</SubType>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AssemblyToReference\AssemblyToReference.csproj">
-      <Project>{70804914-c3d9-4737-bcb8-b3d40f305db3}</Project>
-      <Name>AssemblyToReference</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ReferencedDependency\ReferencedDependency.csproj">
-      <Project>{34899a51-efea-4688-805f-0354166fca09}</Project>
-      <Name>ReferencedDependency</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
 </Project>
