--- a/AssemblyToProcess/AssemblyToProcess.csproj
+++ b/AssemblyToProcess/AssemblyToProcess.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>net452;netcoreapp2.0</TargetFrameworks>
     <NoWarn>CS0659</NoWarn>
+    <DisableFody>true</DisableFody>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Equals\Equals.csproj" />
