--- a/ReferencedDependency/ReferencedDependency.csproj
+++ b/ReferencedDependency/ReferencedDependency.csproj
@@ -2,6 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net452;netcoreapp2.0</TargetFrameworks>
+    <DisableFody>true</DisableFody>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Equals\Equals.csproj" />
