--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -6,8 +6,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <PackageReference Include="FodyHelpers" Version="5.0.0-beta.7" />
-    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="FodyHelpers" Version="5.0.0-beta.11" />
+    <PackageReference Include="Xunit" Version="2.4.1" />
+    <PackageReference Include="XunitLogger" Version="1.0.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
     <ProjectReference Include="..\Equals.Fody\Equals.Fody.csproj" />
     <ProjectReference Include="..\Equals\Equals.csproj" />
