--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,7 +2,8 @@
 <Project>
   <PropertyGroup>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <Version>2.0.1</Version>
     <LangVersion>latest</LangVersion>
+    <Version>3.0.0</Version>
+    <ReleaseNotes>Breaking Change: Not weaving == and != operators anymore. When calling the operators from the same assembly as the type is defined, the behavior was different from when calling from a different assembly. See https://github.com/Fody/Equals/issues/10</ReleaseNotes> 
   </PropertyGroup>
 </Project>
