--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -9,6 +9,12 @@
     <PackageReference Include="FodyHelpers" Version="5.1.1" />
     <PackageReference Include="Xunit" Version="2.4.1" />
     <PackageReference Include="XunitLogger" Version="2.3.1" />
+    <ProjectReference Include="..\BadCaseAssembliesToProcess\ClassWithOperatorsOptOutButWeavingInstruction\ClassWithOperatorsOptOutButWeavingInstruction.csproj" />
+    <ProjectReference Include="..\BadCaseAssembliesToProcess\ClassWithoutOperators\ClassWithoutOperators.csproj" />
+    <ProjectReference Include="..\BadCaseAssembliesToProcess\ClassWithoutWeavingInstruction\ClassWithoutWeavingInstruction.csproj" />
+    <ProjectReference Include="..\BadCaseAssembliesToProcess\StructWithOperatorsOptOutButWeavingInstruction\StructWithOperatorsOptOutButWeavingInstruction.csproj" />
+    <ProjectReference Include="..\BadCaseAssembliesToProcess\StructWithoutWeavingInstruction\StructWithoutWeavingInstruction.csproj" />
+    <ProjectReference Include="..\BadCaseAssembliesToProcess\StructWithoutOperators\StructWithoutOperators.csproj" />
     <ProjectReference Include="..\Equals.Fody\Equals.Fody.csproj" />
     <ProjectReference Include="..\Equals\Equals.csproj" />
     <ProjectReference Include="..\AssemblyToProcess\AssemblyToProcess.csproj" />
