--- a/Equals/Equals.csproj
+++ b/Equals/Equals.csproj
@@ -10,6 +10,7 @@
     <PackageIconUrl>https://raw.githubusercontent.com/Fody/Equals/master/package_icon.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/Fody/Equals</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageTags>Equals, GetHashCode, ILWeaving, Fody, Cecil</PackageTags>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Fody" Version="5.1.1" PrivateAssets="None" />
