--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -18,5 +18,6 @@
     <ProjectReference Include="..\Equals.Fody\Equals.Fody.csproj" />
     <ProjectReference Include="..\Equals\Equals.csproj" />
     <ProjectReference Include="..\AssemblyToProcess\AssemblyToProcess.csproj" />
+    <ProjectReference Include="..\AssemblyToProcessWithoutReference\AssemblyToProcessWithoutReference.csproj" />
   </ItemGroup>
 </Project>
