--- a/Equals/Equals.csproj
+++ b/Equals/Equals.csproj
@@ -14,7 +14,7 @@
     <PackageTags>Equals, GetHashCode, ILWeaving, Fody, Cecil</PackageTags>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Fody" Version="6.0.0-beta.1" PrivateAssets="None" />
-    <PackageReference Include="FodyPackaging" Version="6.0.0-beta.1" PrivateAssets="All" />
+    <PackageReference Include="Fody" Version="6.0.0" PrivateAssets="none" />
+    <PackageReference Include="FodyPackaging" Version="6.0.0" PrivateAssets="All" />
   </ItemGroup>
 </Project>
