--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -8,7 +8,8 @@
     <Reference Include="Microsoft.CSharp" />
     <PackageReference Include="FodyHelpers" Version="6.0.0" />
     <PackageReference Include="Xunit" Version="2.4.1" />
-    <PackageReference Include="XunitLogger" Version="2.5.0" />
+    <PackageReference Include="XunitLogger" Version="3.0.2" />
+    <PackageReference Include="Xunit.ApprovalTests" Version="3.0.2" />
     <ProjectReference Include="..\BadCaseAssembliesToProcess\ClassWithOperatorsOptOutButWeavingInstruction\ClassWithOperatorsOptOutButWeavingInstruction.csproj" />
     <ProjectReference Include="..\BadCaseAssembliesToProcess\ClassWithoutOperators\ClassWithoutOperators.csproj" />
     <ProjectReference Include="..\BadCaseAssembliesToProcess\ClassWithoutWeavingInstruction\ClassWithoutWeavingInstruction.csproj" />
