--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -8,8 +8,8 @@
     <Reference Include="Microsoft.CSharp" />
     <PackageReference Include="FodyHelpers" Version="6.0.5" />
     <PackageReference Include="Xunit" Version="2.4.1" />
-    <PackageReference Include="XunitContext" Version="1.5.1" />
-    <PackageReference Include="Verify.Xunit" Version="1.3.0" />
+    <PackageReference Include="XunitContext" Version="1.5.2" />
+    <PackageReference Include="Verify.Xunit" Version="1.3.1-beta.1" />
     <ProjectReference Include="..\BadCaseAssembliesToProcess\ClassWithOperatorsOptOutButWeavingInstruction\ClassWithOperatorsOptOutButWeavingInstruction.csproj" />
     <ProjectReference Include="..\BadCaseAssembliesToProcess\ClassWithoutOperators\ClassWithoutOperators.csproj" />
     <ProjectReference Include="..\BadCaseAssembliesToProcess\ClassWithoutWeavingInstruction\ClassWithoutWeavingInstruction.csproj" />
