--- a/Equals/Equals.csproj
+++ b/Equals/Equals.csproj
@@ -12,6 +12,7 @@
     <ReleaseNotes>$(PackageProjectUrl)/milestones?state=closed</ReleaseNotes>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageTags>Equals, GetHashCode, ILWeaving, Fody, Cecil</PackageTags>
+    <NoWarn>NU5118;CS1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Fody" Version="6.3.0" PrivateAssets="none" />
