add DevelopmentDependency to Equals.Fody project

--- a/Equals.Fody/Equals.Fody.csproj
+++ b/Equals.Fody/Equals.Fody.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <DebugType>portable</DebugType>
+    <DevelopmentDependency>true</DevelopmentDependency>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FodyHelpers" Version="6.5.2" />
