--- a/Equals.Fody/Equals.Fody.csproj
+++ b/Equals.Fody/Equals.Fody.csproj
@@ -4,6 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <DebugType>portable</DebugType>
   </PropertyGroup>
+  <PropertyGroup>
+    <PackageTags>Equatable;Equals;Fody;Weave;CodeGen</PackageTags>
+    <Description>
+      Generate Equals, GetHashCode and operators methods from properties for class decorated with a [Equals] Attribute
+    </Description>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FodyHelpers" Version="6.6.0" />
   </ItemGroup>
