--- a/Equals.Fody/Equals.Fody.csproj
+++ b/Equals.Fody/Equals.Fody.csproj
@@ -7,7 +7,7 @@
   <PropertyGroup>
     <PackageTags>Equatable;Equals;Fody;Weave;CodeGen</PackageTags>
     <Description>
-      Generate Equals, GetHashCode and operators methods from properties for class decorated with a [Equals] Attribute
+      Generate Equals, GetHashCode and operator methods from properties for classes decorated with an [Equals] Attribute.
     </Description>
   </PropertyGroup>
   <ItemGroup>
