--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -6,9 +6,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'" />
-    <PackageReference Include="FodyHelpers" Version="6.6.3" />
-    <PackageReference Include="Verify.Xunit" Version="17.4.2" />
-    <PackageReference Include="xunit" Version="*" />
+    <PackageReference Include="FodyHelpers" Version="6.6.4" />
+    <PackageReference Include="Verify.Xunit" Version="19.3.0" />
+    <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
     <ProjectReference Include="..\BadCaseAssembliesToProcess\ClassWithOperatorsOptOutButWeavingInstruction\ClassWithOperatorsOptOutButWeavingInstruction.csproj" />
