--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,11 @@ environment:
 skip_commits:
   message: /doco|Merge pull request.*/
 build_script:
-- cmd: dotnet build --configuration Release
+- pwsh: |
+    Invoke-WebRequest "https://dot.net/v1/dotnet-install.ps1" -OutFile "./dotnet-install.ps1"
+    ./dotnet-install.ps1 -JSonFile src/global.json -Architecture x64 -InstallDir 'C:\Program Files\dotnet'
+- dotnet build src --configuration Release
+- dotnet test src --configuration Release --no-build --no-restore
 test:
   assemblies:
     - '**\*Tests.dll'
