--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ build_script:
 - pwsh: |
     Invoke-WebRequest "https://dot.net/v1/dotnet-install.ps1" -OutFile "./dotnet-install.ps1"
     ./dotnet-install.ps1 -JSonFile global.json -Architecture x64 -InstallDir 'C:\Program Files\dotnet'
-- dotnet build src --configuration Release
-- dotnet test src --configuration Release --no-build --no-restore
+- dotnet build --configuration Release
+- dotnet test --configuration Release --no-build --no-restore
 artifacts:
 - path: nugets\**\*.nupkg
