--- a/.gitattributes
+++ b/.gitattributes
@@ -30,4 +30,5 @@
 *.svg binary
 
 .editorconfig text eol=lf working-tree-encoding=UTF-8
-Shared.sln.DotSettings text eol=lf working-tree-encoding=UTF-8
+*.sln.DotSettings text eol=lf working-tree-encoding=UTF-8
+*.slnx.DotSettings text eol=lf working-tree-encoding=UTF-8
